welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:3: error: not found: value estSurBlanc
while (estSurBlanc()){
       ^